Chore: yaml에 네이버 클라이언트 정보 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,3 +26,10 @@ spring:
   ### Security ###
   jwt:
     secret: ${JWT_SECRET}
+  security:
+    oauth2:
+      client:
+        registration:
+          naver:
+            client-id: ${NAVER_CLIENT_ID}
+            client-secret: ${NAVER_CLIENT_SECRET}
