Chore: yml 파이썬 경로 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -49,3 +49,7 @@ spring:
     properties:
       mail.smtp.auth: true
       mail.smtp.starttls.enable: true
+
+  ### Python ###
+  python:
+    path: ${PYTHON_PATH}
