Chore: gradlew 깃 리포지토리에 추가

--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,7 @@ out/
 /.gitattributes
 /gradle/wrapper/gradle-wrapper.jar
 /gradle/wrapper/gradle-wrapper.properties
-/gradlew
 /gradlew.bat
 /src/test/kotlin/team/goodpeople/GoodpeopleApplicationTests.kt
 /back.env
+/src/main/resources/application-test.yml
