Chore: 반복문 오류 수정

--- a/.github/workflows/update_github_ip.yml
+++ b/.github/workflows/update_github_ip.yml
@@ -58,7 +58,7 @@ jobs:
               --group-id "$SG_ID" \
               --protocol tcp \
               --port 22 \
-              --cidr "$CIDR" \
+              --cidr "$CIDR"
           done
 
           echo "EC2 Security Group Updated"
