Chore: description 오류 행 삭제

--- a/.github/workflows/update_github_ip.yml
+++ b/.github/workflows/update_github_ip.yml
@@ -66,8 +66,7 @@ jobs:
               --group-id "$SG" \
               --protocol tcp \
               --port 22 \
-              --cidr "$CIDR" \
-              --description "GitHub Actions"
+              --cidr "$CIDR"
 
             COUNT=$((COUNT + 1))
           done
