--- a/.github/workflows/deploy_action.yml
+++ b/.github/workflows/deploy_action.yml
@@ -9,10 +9,11 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
+    # Process: Build
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      
+
       - name: Set JDK
         uses: actions/setup-java@v3
         with:
@@ -22,6 +23,27 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew clean build -x test
 
+      # Process: Add GitHub Action IP to SG
+      - name: GitHub Action Runner Public IP
+        id: ip
+        uses: haythem/public-ip@v1.3
+        
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with: 
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Add GitHub Action IP to SG
+        run: |
+          aws ec2 authorize-security-group-ingress \
+            --group-id ${{ secrets.SECURITY_GROUP_ID }} \
+            --protocol tcp \
+            --port 22 \
+            --cidr ${{ steps.ip.outputs.ipv4 }}/32 || echo "The IP already exists in the security group"
+      
+      # Process: Upload JAR to AWS EC2
       - name: Upload JAR to EC2
         uses: appleboy/scp-action@master
         with:
