--- a/.github/workflows/deploy_action.yml
+++ b/.github/workflows/deploy_action.yml
@@ -14,6 +14,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Debug
+        run: |
+          echo "$EC2_KEY" | head -n 5
+        env:
+          EC2_KEY: ${{ secrets.EC2_KEY }}
+
       - name: Set JDK
         uses: actions/setup-java@v3
         with:
