Chore: 빌드 파일 미존재 디버깅

--- a/.github/workflows/deploy_action.yml
+++ b/.github/workflows/deploy_action.yml
@@ -26,6 +26,10 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew clean build -x test
 
+      # Debug
+      - name: check JAR exists
+        run: ls -lh build/libs/
+
       # Process: Add GitHub Action IP to SG
       - name: GitHub Action Runner Public IP
         id: ip
