--- a/.github/workflows/deploy_action.yml
+++ b/.github/workflows/deploy_action.yml
@@ -57,7 +57,7 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
-          source: "build/libs/*.jar"
+          source: "build/libs/goodpeople-0.0.1-SNAPSHOT.jar"
           target: "~/deploy"
 
       - name: Run JAR on EC2
@@ -66,13 +66,28 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
+          script_stop: false
+          # script: |
+            # echo "Killing existing JAR if running..."
+            # pkill -f 'java.*.jar' || true
+            # echo "Starting new JAR..."
+            # cd ~/deploy
+            # nohup java -jar *.jar > app.log 2>&1 &
           script: |
             echo "Killing existing JAR if running..."
-            pkill -f 'java.*.jar' || true
+            pkill -f 'goodpeople-0.0.1-SNAPSHOT.jar' || echo "No process found."
+      
             echo "Starting new JAR..."
             cd ~/deploy
-            nohup java -jar *.jar > app.log 2>&1 &
-            fail_on_error: false
+            nohup java -jar goodpeople-0.0.1-SNAPSHOT.jar > app.log 2>&1 &
+      
+            sleep 3
+            echo "🔍 Running processes:"
+            pgrep -fl java || echo "⚠️ No java process running."
+      
+            echo "app.log:"
+            tail -n 10 app.log || echo "app.log not found"
+            
 
       # Delete GitHub SSH IP
       - name: Revoke GitHub Actions IP from SG
