--- a/.github/workflows/deploy_action.yml
+++ b/.github/workflows/deploy_action.yml
@@ -60,6 +60,16 @@ jobs:
           source: "build/libs/goodpeople-0.0.1-SNAPSHOT.jar"
           target: "~/deploy"
 
+      - name: Kill existing JAR on EC2
+        uses: appleboy/ssh-action@v0.1.8
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_KEY }}
+          script: |
+            echo "Killing existing JAR if running..."
+            pkill -f 'goodpeople-0.0.1-SNAPSHOT.jar' || true
+
       - name: Run JAR on EC2
         uses: appleboy/ssh-action@master
         with:
@@ -74,17 +84,14 @@ jobs:
             # cd ~/deploy
             # nohup java -jar *.jar > app.log 2>&1 &
           script: |
-            echo "Killing existing JAR if running..."
-            pkill -f 'goodpeople-0.0.1-SNAPSHOT.jar' || echo "No process found."
-      
             echo "Starting new JAR..."
             cd ~/deploy
             nohup java -jar goodpeople-0.0.1-SNAPSHOT.jar > app.log 2>&1 &
-      
             sleep 3
+            
             echo "🔍 Running processes:"
-            pgrep -fl java || echo "⚠️ No java process running."
-      
+            pgrep -fl java || echo "No java process running."
+            
             echo "app.log:"
             tail -n 10 app.log || echo "app.log not found"
             
