--- a/.github/workflows/deploy_action.yml
+++ b/.github/workflows/deploy_action.yml
@@ -76,15 +76,17 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
-          # script: |
-            # echo "Killing existing JAR if running..."
-            # pkill -f 'java.*.jar' || true
-            # echo "Starting new JAR..."
-            # cd ~/deploy
-            # nohup java -jar *.jar > app.log 2>&1 &
+          debug: true
           script: |
             echo "Starting new JAR..."
             cd ~/deploy
+
+            if [ ! -f goodpeople-0.0.1-SNAPSHOT.jar ]; then
+              echo "JAR Not Exists"
+              ls -lh
+              exit 1
+            fi
+            
             nohup java -jar goodpeople-0.0.1-SNAPSHOT.jar > app.log 2>&1 &
             sleep 3
             
