--- a/.github/workflows/deploy_action.yml
+++ b/.github/workflows/deploy_action.yml
@@ -52,7 +52,7 @@ jobs:
       
       # Process: Upload JAR to AWS EC2
       - name: Upload JAR to EC2
-        uses: appleboy/scp-action@master
+        uses: appleboy/scp-action@v0.1.4
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
@@ -71,7 +71,7 @@ jobs:
             pkill -f 'goodpeople-0.0.1-SNAPSHOT.jar' || true
 
       - name: Run JAR on EC2
-        uses: appleboy/ssh-action@master
+        uses: appleboy/ssh-action@v0.1.8
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
