--- a/.github/workflows/deploy_action.yml
+++ b/.github/workflows/deploy_action.yml
@@ -76,7 +76,6 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
-          debug: true
           script: |
             echo "Starting new JAR..."
             cd ~/deploy
@@ -86,9 +85,16 @@ jobs:
               ls -lh
               exit 1
             fi
-            
+
+            # Permission
+            chmod +x goodpeople-0.0.1-SNAPSHOT.jar
+
+            # Run
             nohup java -jar goodpeople-0.0.1-SNAPSHOT.jar > app.log 2>&1 &
-            sleep 3
+
+            # PID Log
+            JAVA_PID=$!
+            echo "Started Java process with PID: $JAVA_PID"
             
             echo "🔍 Running processes:"
             pgrep -fl java || echo "No java process running."
