--- a/.github/workflows/deploy_action.yml
+++ b/.github/workflows/deploy_action.yml
@@ -76,6 +76,9 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
+          command_timeout: "10m"
+          script_stop: true
+          debug: true
           script: |
             echo "Starting new JAR..."
             cd ~/deploy
