--- a/.github/workflows/deploy_action.yml
+++ b/.github/workflows/deploy_action.yml
@@ -60,15 +60,15 @@ jobs:
           source: "build/libs/goodpeople-0.0.1-SNAPSHOT.jar"
           target: "~/deploy"
 
-      - name: Kill existing JAR on EC2
-        uses: appleboy/ssh-action@v0.1.8
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_KEY }}
-          script: |
-            echo "Killing existing JAR if running..."
-            pkill -f 'goodpeople-0.0.1-SNAPSHOT.jar' || true
+      # - name: Kill existing JAR on EC2
+      #   uses: appleboy/ssh-action@v0.1.8
+      #   with:
+      #     host: ${{ secrets.EC2_HOST }}
+      #     username: ${{ secrets.EC2_USER }}
+      #     key: ${{ secrets.EC2_KEY }}
+      #     script: |
+      #       echo "Killing existing JAR if running..."
+      #       pkill -f 'goodpeople-0.0.1-SNAPSHOT.jar' || true
 
       - name: Run JAR on EC2
         uses: appleboy/ssh-action@v0.1.8
