--- a/.github/workflows/deploy_action.yml
+++ b/.github/workflows/deploy_action.yml
@@ -68,7 +68,12 @@ jobs:
           key: ${{ secrets.EC2_KEY }}
           script: |
             echo "Killing existing JAR if running..."
-            pkill -f 'goodpeople-0.0.1-SNAPSHOT.jar' || true
+            if pgrep -f 'goodpeople-0.0.1-SNAPSHOT.jar'; then
+              echo "Found running process, attempting to kill..."
+              pkill -f 'goodpeople-0.0.1-SNAPSHOT.jar' || echo "Kill failed, but continuing..."
+            else
+              echo "No running process found, nothing to kill."
+            fi
 
       - name: Run JAR on EC2
         uses: appleboy/ssh-action@v0.1.8
