Chore: kill 작업 항상 성공 처리로 수정

--- a/.github/workflows/deploy_action.yml
+++ b/.github/workflows/deploy_action.yml
@@ -74,6 +74,8 @@ jobs:
             else
               echo "No running process found, nothing to kill."
             fi
+            # Allways Success
+            exit -
 
       - name: Run JAR on EC2
         uses: appleboy/ssh-action@v0.1.8
