--- a/.github/workflows/deploy_action.yml
+++ b/.github/workflows/deploy_action.yml
@@ -75,7 +75,7 @@ jobs:
               echo "No running process found, nothing to kill."
             fi
             # Allways Success
-            exit -
+            exit 0
 
       - name: Run JAR on EC2
         uses: appleboy/ssh-action@v0.1.8
