--- a/.github/workflows/deploy_action.yml
+++ b/.github/workflows/deploy_action.yml
@@ -79,6 +79,7 @@ jobs:
 
       - name: Run JAR on EC2
         uses: appleboy/ssh-action@v0.1.8
+        continue-on-error: true
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
