Feat: 없는 API 요청 시 404 응답

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 spring:
   application:
     name: goodpeople
+  ### Web ###
+  web:
+    resources:
+      add-mappings: false
 
   ### DB ###
   # MySQL
