Feat: FastAPI 서버

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -57,3 +57,7 @@ spring:
   ### Python ###
   python:
     path: ${PYTHON_PATH}
+    script_path: ${PYTHON_SCRIPT_PATH}
+  external:
+    fastapi:
+      url: ${FASTAPI_PATH}
