--- a/.github/workflows/deploy_action.yml
+++ b/.github/workflows/deploy_action.yml
@@ -143,6 +143,34 @@ jobs:
             echo "Recent log output:"
             tail -n 10 app.log || echo "app.log not found"
 
+      # FastAPI 업로드
+      - name: Upload FastAPI server to EC2
+        uses: appleboy/scp-action@v0.1.4
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_KEY }}
+          source: "fastapi/*"
+          target: "~/fastapi"
+
+      # FastAPI 서버 실행
+      - name: Run FastAPI server on EC2
+        uses: appleboy/ssh-action@v0.1.8
+        continue-on-error: true
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_KEY }}
+          script: |
+            echo "Killing existing FastAPI..."
+            pkill -f "uvicorn" || true
+
+            echo "Activating conda and restarting FastAPI..."
+            source ~/miniconda3/etc/profile.d/conda.sh
+            conda activate torch
+            cd ~/fastapi_server
+            nohup uvicorn app:app --host 0.0.0.0 --port 8000 > fastapi.log 2>&1 &
+
       # Delete GitHub SSH IP
       - name: Revoke GitHub Actions IP from SG
         if: always()
