--- a/.github/workflows/deploy_action.yml
+++ b/.github/workflows/deploy_action.yml
@@ -166,9 +166,8 @@ jobs:
             pkill -f "uvicorn" || true
 
             echo "Activating conda and restarting FastAPI..."
-            source ~/miniconda3/etc/profile.d/conda.sh
-            conda activate torch
-            cd ~/fastapi_server
+            source ~/myenv/bin/activate
+            cd ~/fastapi
             nohup uvicorn app:app --host 0.0.0.0 --port 8000 > fastapi.log 2>&1 &
 
       # Delete GitHub SSH IP
