--- a/.github/workflows/deploy_action.yml
+++ b/.github/workflows/deploy_action.yml
@@ -151,7 +151,7 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
           source: "fastapi/*"
-          target: "~/fastapi"
+          target: "~"
 
       # FastAPI 서버 실행
       - name: Run FastAPI server on EC2
