--- a/.github/workflows/deploy_action.yml
+++ b/.github/workflows/deploy_action.yml
@@ -135,12 +135,7 @@ jobs:
 
             # Bash 로그인 쉘에서 직접 실행
             echo "Activating env and restarting FastAPI..."
-            bash -lc '
-            cd ~/fastapi \
-            && nohup ~/myenv/bin/uvicorn app:app \
-                  --host 0.0.0.0 --port 8000 \
-                  >> ~/fastapi/fastapi.log 2>&1 &
-            '
+            bash -lc 'cd ~/fastapi && nohup ~/myenv/bin/uvicorn app:app --host 0.0.0.0 --port 8000 > fastapi.log 2>&1 &'
 
       # Delete GitHub SSH IP
       - name: Revoke GitHub Actions IP from SG
