--- a/.github/workflows/deploy_action.yml
+++ b/.github/workflows/deploy_action.yml
@@ -86,7 +86,7 @@ jobs:
       # 업로드 한 JAR 실행
       - name: Run JAR on EC2
         uses: appleboy/ssh-action@v0.1.8
-        # continue-on-error: true
+        continue-on-error: true
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
@@ -124,7 +124,7 @@ jobs:
       # FastAPI 서버 실행
       - name: Run FastAPI server on EC2
         uses: appleboy/ssh-action@v0.1.8
-        # continue-on-error: true
+        continue-on-error: true
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
@@ -135,7 +135,7 @@ jobs:
 
             # Bash 로그인 쉘에서 직접 실행
             echo "Activating env and restarting FastAPI..."
-            bash -lc 'cd ~/fastapi && nohup ~/myenv/bin/uvicorn app:app --host 0.0.0.0 --port 8000 > fastapi.log 2>&1 &'
+            bash -lc 'cd ~/fastapi && nohup ~/myenv/bin/uvicorn app:app --host 0.0.0.0 --port 8000 > ~/fastapi/fastapi.log 2>&1 &'
 
       # Delete GitHub SSH IP
       - name: Revoke GitHub Actions IP from SG
