Chore: 캐싱 및 디버깅

--- a/.github/workflows/deploy_action.yml
+++ b/.github/workflows/deploy_action.yml
@@ -121,6 +121,17 @@ jobs:
             echo "Recent log output:"
             tail -n 10 app.log || echo "app.log not found"
 
+      # 캐싱
+      - name: Create Python cache
+        uses: appleboy/ssh-action@v0.1.8
+        with: 
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_KEY }}
+          script: |
+            echo "Preparing cache..."
+            bash -lc 'cd ~/fastapi && python prepare_law_cache.py'
+
       # 실행 중인 FastAPI 서버 종료
       - name: Kill existing FastAPI server on EC2
         uses: appleboy/ssh-action@v0.1.8
@@ -144,6 +155,9 @@ jobs:
             # Bash 로그인 쉘에서 직접 실행
             echo "Activating env and restarting FastAPI..."
             bash -lc 'cd ~/fastapi && nohup ~/myenv/bin/uvicorn app:app --host 0.0.0.0 --port 8000 > ~/fastapi/fastapi.log 2>&1 &'
+
+            # Debug: timeout 문제 해결
+            exit 0
 
       # Delete GitHub SSH IP
       - name: Revoke GitHub Actions IP from SG
