--- a/.github/workflows/deploy_action.yml
+++ b/.github/workflows/deploy_action.yml
@@ -121,17 +121,6 @@ jobs:
             echo "Recent log output:"
             tail -n 10 app.log || echo "app.log not found"
 
-      # 캐싱
-      - name: Create Python cache
-        uses: appleboy/ssh-action@v0.1.8
-        with: 
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_KEY }}
-          script: |
-            echo "Preparing cache..."
-            bash -lc 'cd ~/fastapi && python prepare_law_cache.py'
-
       # 실행 중인 FastAPI 서버 종료
       - name: Kill existing FastAPI server on EC2
         uses: appleboy/ssh-action@v0.1.8
@@ -143,6 +132,17 @@ jobs:
           script: |
             echo "Killing existing FastAPI..."
             pkill -f "uvicorn" || true
+
+      # 캐싱
+      - name: Create Python cache
+        uses: appleboy/ssh-action@v0.1.8
+        with: 
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_KEY }}
+          script: |
+            echo "Preparing cache..."
+            bash -lc 'cd ~/fastapi && source ~/myenv/bin/active python3.8 prepare_law_cache.py'
       
       # FastAPI 서버 실행
       - name: Run FastAPI server on EC2
