--- a/.github/workflows/deploy_action.yml
+++ b/.github/workflows/deploy_action.yml
@@ -143,6 +143,8 @@ jobs:
           script: |
             echo "Preparing cache..."
             bash -lc 'cd ~/fastapi && source ~/myenv/bin/activate python3.8 prepare_law_cache.py'
+
+            echo "Caching complete"
       
       # FastAPI 서버 실행
       - name: Run FastAPI server on EC2
@@ -152,13 +154,20 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
           script: |
-            # Bash 로그인 쉘에서 직접 실행
             echo "Activating env and restarting FastAPI..."
-            bash -lc 'cd ~/fastapi && nohup ~/myenv/bin/uvicorn app:app --host 0.0.0.0 --port 8000 
-            > ~/fastapi/fastapi.log 2>&1 < /dev/null &'
-
-            # Debug: timeout 문제 해결. 위의 /dev/null & 포함
+            cd ~/fastapi
+            source ~/myenv/bin/activate
+            
+            nohup uvicorn app:app --host 0.0.0.0 --port 8000 \
+              > fastapi.log 2>&1 < /dev/null &
+              
             exit 0
+            # # Bash 로그인 쉘에서 직접 실행
+            # bash -lc 'cd ~/fastapi && nohup ~/myenv/bin/uvicorn app:app --host 0.0.0.0 --port 8000 
+            # > ~/fastapi/fastapi.log 2>&1 < /dev/null &'
+
+            # # Debug: timeout 문제 해결. 위의 /dev/null & 포함
+            # exit 0
 
       # Delete GitHub SSH IP
       - name: Revoke GitHub Actions IP from SG
